# starkhack_madara

./: Cargo.toml
crates/node/: Cargo.toml
crates/node/src/: chain_spec.rs  service.rs
crates/pallets/btc/: Cargo.toml  README.md  lib.rs.rs
crates/pallets/lightning/: Cargo.toml  README.md
crates/pallets/nostr/: Cargo.toml  README.md
crates/pallets/nostr/src/: README.md  lib.rs  runtime.rs  tests.rs  types.rs
crates/pallets/oracle/: README.md
crates/pallets/oracle/src/: README.md  lib.rs  tests.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs  pallets.rs
