[package]
name = "pallet-nostr"
version = "4.0.0-dev"
edition = "2021"
license = "MIT-0"
description = "FRAME pallet for Nostr worker"
readme = "README.md"
authors = ["Parity Technologies <admin@parity.io>"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
lite-json = { version = "0.2.0", default-features = false }
log = { workspace = true }
parity-scale-codec = { workspace = true, features = ["derive"] }
reqwest = { workspace = true, optional = true, features = [
  "blocking",
  "rustls-tls",
] }
scale-info = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }

# Substrate frame
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }

# Substrate primitives
sp-version = { workspace = true }
sp-api = { workspace = true }
sp-arithmetic = { workspace = true }
sp-core = { workspace = true }
sp-inherents = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-keystore = {  workspace = true ,  optional = true  }

# Madara
mc-db = { workspace = true, default-features = true }
mp-digest-log = { workspace = true, default-features = true }
mp-hashers = { workspace = true, default-features = true }
mp-storage = { workspace = true, default-features = true }

# Starknet
pallet-starknet-runtime-api = { workspace = true }
starknet_api = { workspace = true, default-features = true }
pallet-starknet = { workspace = true, default-features = true }
nostr = "0.32"
nostr-sdk = "0.32"
tokio="1.38.0"

[features]
default = [ "std" ]
std = [
	"parity-scale-codec/std",
	"frame-support/std",
	"frame-system/std",
	"lite-json/std",
	"log/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-keystore/std",
	"sp-runtime/std",
	"sp-std/std",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
]